# pixiechess-client

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/pixiechess_client/: __init__.py  _http.py  client.py  exceptions.py  pagination.py
src/pixiechess_client/models/: __init__.py  auctions.py  common.py  game.py  leaderboard.py  misc.py  pieces.py  tournaments.py  user.py
src/pixiechess_client/resources/: auctions.py  games.py  leaderboard.py  misc.py  pieces.py  tournaments.py  users.py
