[project]
name = "pixiechess-client"
version = "0.1.0"
description = "Python client for the PixieChess API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
